# mtt

./: .rustfmt.toml  Cargo.toml
crates/mtt/: Cargo.toml
crates/mtt/src/: main.rs
crates/mtt_core/: Cargo.toml
crates/mtt_core/src/: lib.rs  math.rs  schematic.rs  spatial.rs
crates/mtt_core/src/game/: mod.rs  node.rs
crates/mtt_core/src/world/: block.rs  map.rs  mod.rs  node.rs
crates/mtt_macros/: Cargo.toml
crates/mtt_macros/src/: lib.rs
crates/mtt_protocol/: Cargo.toml
crates/mtt_protocol/src/: clientbound.rs  frame.rs  lib.rs  serverbound.rs
crates/mtt_renderer/: Cargo.toml
crates/mtt_renderer/src/: camera.rs  lib.rs  mesh.rs
crates/mtt_serialize/: Cargo.toml
crates/mtt_serialize/src/: lib.rs
crates/mtt_world/: Cargo.toml
data/shaders/: world.frag  world.vert  world.wgsl
mtt/: Cargo.toml
mtt/src/: client.rs  game.rs  main.rs  net.rs  renderer.rs  serialize.rs  world.rs
mtt/src/game/: mod.rs  node.rs
mtt/src/math/: mod.rs
mtt/src/media/: image.rs  mod.rs
mtt/src/net/: clientbound.rs  connection.rs  mod.rs  packet.rs  serverbound.rs
mtt/src/renderer/: mod.rs
mtt/src/serialize/: collections.rs  mod.rs
mtt/src/shaders/: block.frag  fullscreen.vert  loading.frag  triangle.frag  triangle.vert
mtt/src/world/: block.rs  map.rs  mod.rs
mtt_core/: Cargo.toml
mtt_core/src/: lib.rs  math.rs
mtt_core/src/world/: block.rs  mod.rs
mtt_macros/: Cargo.toml
mtt_macros/src/: lib.rs
mtt_protocol/: Cargo.toml
mtt_protocol/src/: clientbound.rs  packet.rs  serverbound.rs
mtt_renderer/: Cargo.toml
mtt_renderer/src/: lib.rs
mtt_serialize/: Cargo.toml
mtt_serialize/src/: lib.rs
mtt_world/src/: lib.rs
