[package]
name = "mtt"
version = "0.1.0+5.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utilities
anyhow = "1.0.44"
bitflags = "1.3.2"
byteorder = "1.4.3"
bytemuck = { version = "1.7.2", features = ["derive"] }
env_logger = { version = "0.9.0", default-features = false }
log = "0.4.14"
mtt_macros = { path = "../mtt_macros" }

# Compression
flate2 = "1.0.22"
zstd = "0.9.0"

# Crypto
sha2 = "0.9.8"
srp = { git = "https://github.com/weqqr/PAKEs", branch = "hn_xor_hg_fix" }

# Network/Async
tokio = { version = "1.12.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

# Graphics
shaderc = "0.7.3"
wgpu = { version = "0.11", features = ["spirv"] }
winit = "0.25.0"
