[package]
name = "mtt"
version = "0.1.0+5.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtt_core = { path = "../mtt_core" }
mtt_macros = { path = "../mtt_macros" }
mtt_protocol = { path = "../mtt_protocol" }
mtt_serialize = { path = "../mtt_serialize" }
mtt_world = { path = "../mtt_world" }

# Utilities
anyhow = "1.0.45"
bytemuck = { version = "1.7.2", features = ["derive"] }
dirs = "4.0.0"
env_logger = { version = "0.9.0", default-features = false }
log = "0.4.14"

# Crypto
sha2 = "0.9.8"
srp = { git = "https://github.com/weqqr/PAKEs", branch = "hn_xor_hg_fix" }

# Network/Async
tokio = { version = "1.12.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

# Graphics
png = { git = "https://github.com/image-rs/image-png", rev = "c24fc93134ce82579595912230f9a3aed33bb1fc" }
shaderc = "0.7.3"
wgpu = { version = "0.11", features = ["spirv"] }
winit = "0.25.0"
