[package]
name = "mtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtt_core = { path = "../mtt_core" }
mtt_renderer = { path = "../mtt_renderer" }

anyhow = { workspace = true }
winit = { workspace = true }

[lints]
workspace = true
