[package]
name = "mtt_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtt_macros = { path = "../mtt_macros" }
mtt_serialize = { path = "../mtt_serialize" }
anyhow = "1.0.51"
bitflags = "1.3.2"
byteorder = "1.4.3"
bytemuck = { version = "1.7.2", features = ["derive"] }
flate2 = "1.0.22"
zstd = "0.9.0"
