[package]
name = "mtt_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtt_macros = { path = "../mtt_macros" }
mtt_serialize = { path = "../mtt_serialize" }

anyhow = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
flate2 = "1.0.28"
glam = { workspace = true }
zstd = "0.13.0"

[lints]
workspace = true
