[package]
name = "mtt_macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.42", features = ["full"] }
quote = "1.0.33"
proc-macro2 = "1.0.71"

[lints]
workspace = true
