[package]
name = "mtt_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
base64 = "0.13.0"
mtt_core = { path = "../mtt_core" }
mtt_macros = { path = "../mtt_macros" }
mtt_serialize = { path = "../mtt_serialize" }
