[package]
name = "mtt_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
bytemuck = "1.7.2"
mtt_core = { path = "../mtt_core" }
nalgebra-glm = "0.15.0"
pollster = "0.2.4"
shaderc = "0.7.3"
wgpu = "0.11.0"
winit = "0.25.0"
