[package]
name = "mtt_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
mtt_core = { path = "../mtt_core" }
nalgebra-glm = "0.15.0"
pollster = "0.3.0"
shaderc = "0.7.3"
wgpu = "0.18.0"
winit = { workspace = true }
